# wordies

./: .gitignore  README.md  main.py  pyproject.toml
src/: clues.py  main.py  wordies.py
